# cha-ca-hai-chi-em

./: .gitignore  Dockerfile  Makefile  README.md  RELEASE_NOTE.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AnimatedFish.tsx  Layout.tsx  PrivateRoute.tsx  index.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/pages/: Dashboard.tsx  Login.tsx  ProductImport.tsx  Register.tsx  SignIn.tsx  SignUp.tsx  Tracking.tsx  Warehouse.tsx  index.ts
frontend/src/services/: api.ts  dashboard.ts
migration/: 0.1.0.sql  0.2.0.sql  0.2.1.sql  0.3.0.sql  0.3.1.sql  0.4.0.sql
migration/baseline/: product.csv
src/: __init__.py  default.py  repository.py  wsgi.py
src/cli/: product.py
src/helpers/: collections_.py  string.py
src/models/: __init__.py  base.py  customer.py  import_line.py  importer.py  order.py  order_line.py  product.py  user.py
src/modules/: routes.py
src/services/: __init__.py  customer.py  dashboard.py  import_line.py  importer.py  order.py  order_line.py  product.py  user.py
src/templates/: confirmation.html  index.html  login.html  product_import.html  register.html  tracking.html  warehouse.html
